repo/deployment/ingress_test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-default-prod"
    certmanager.k8s.io/acme-challenge-type: http01

    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - test.shitangdama.cn
    secretName: deployment-test
  rules:
    - host: test.shitangdama.cn
      http:
        paths:
        - path: /
          backend:
            serviceName: deployment-test
            servicePort: 80
